<resources>
    <string name="app_name">WhatsappOne</string>

    <string name="permission_text">
        This App requires permissions to access and display WhatsApp messages.
        Tap on <b>Settings</b> in the top right corner to grant them.
    </string>

    <!-- Menu related -->
    <string name="title_settings">Settings</string>

    <!-- Preference Screen -->
    <!-- Category Name -->
    <string name="pref_config">Permissions</string>

    <!-- Notification Listener Permission -->
    <!-- Title for Notification Listener permission setting -->
    <string name="pref_notification_listen_setting_title">WhatsApp Message Notifications</string>
    <!-- Summary of Notification Listener permission setting -->
    <string name="pref_notification_listen_setting_summary">Permission to access WhatsApp messages. Tap to allow it on the Settings Page.</string>

    <!-- Draw Overlay Permission -->
    <!-- Title for Notification Listener permission setting -->
    <string name="pref_draw_overlay_setting_title">Show Chat Head</string>
    <!-- Summary of Notification Listener permission setting -->
    <string name="pref_draw_overlay_setting_summary">Permission to display the Chat Head over other screens. Tap to allow it on the Settings Page.</string>

</resources>
