<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/pref_config" >

        <Preference
            android:summary="@string/pref_notification_listen_setting_summary"
            android:title="@string/pref_notification_listen_setting_title" >
            <intent android:action="android.settings.ACTION_NOTIFICATION_LISTENER_SETTINGS">
            </intent>
        </Preference>

        <Preference
            android:summary="@string/pref_draw_overlay_setting_summary"
            android:title="@string/pref_draw_overlay_setting_title" >
            <intent android:action="android.settings.action.MANAGE_OVERLAY_PERMISSION">
            </intent>
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>